# py-task-cli

./: README.md  main.py  pyproject.toml
src/py_task_cli/: config.py  depends.py  main.py
src/py_task_cli/models/: task.py
src/py_task_cli/repositories/: interfaces.py  task.py
src/py_task_cli/services/: task.py
src/py_task_cli/utils/: util.py
tests/: test_tasks.py
